fix for service page hex cutting off link

--- a/source/scss/_media-queries.scss
+++ b/source/scss/_media-queries.scss
@@ -239,6 +239,7 @@
 	}
 
 	.page-nav {
+		margin-top: 20px;
 		bottom: auto;
 		.flex {
 			display: block;
